Added the nnet calibration and scoring feature
